learning_programs/i2c-display-example/build/log/idf_py_stderr_output_16419
/home/danny/esp-idf/projects/learning_programs/i2c-display-example/main/i2c-display-example.c: In function 'app_main':
/home/danny/esp-idf/projects/learning_programs/i2c-display-example/main/i2c-display-example.c:34:24: warning: multi-character literal with 11 characters exceeds 'int' size of 4 bytes
   34 |     char message[32] = 'hello world';
      |                        ^~~~~~~~~~~~~
/home/danny/esp-idf/projects/learning_programs/i2c-display-example/main/i2c-display-example.c:34:24: error: invalid initializer
/home/danny/esp-idf/projects/learning_programs/i2c-display-example/main/i2c-display-example.c:35:26: error: initialization of 'char *' from incompatible pointer type 'char (*)[32]' [-Wincompatible-pointer-types]
   35 |     char * message_ptr = &message;
      |                          ^
/home/danny/esp-idf/projects/learning_programs/i2c-display-example/main/i2c-display-example.c:38:37: error: pointer targets in passing argument 2 of 'i2c_master_transmit' differ in signedness [-Werror=pointer-sign]
   38 |     i2c_master_transmit(dev_handle, message_ptr, sizeof(message), -1 );
      |                                     ^~~~~~~~~~~
      |                                     |
      |                                     char *
In file included from /home/danny/esp-idf/projects/learning_programs/i2c-display-example/main/i2c-display-example.c:4:
/home/danny/esp-idf/components/esp_driver_i2c/include/driver/i2c_master.h:135:79: note: expected 'const uint8_t *' {aka 'const unsigned char *'} but argument is of type 'char *'
  135 | esp_err_t i2c_master_transmit(i2c_master_dev_handle_t i2c_dev, const uint8_t *write_buffer, size_t write_size, int xfer_timeout_ms);
      |                                                                ~~~~~~~~~~~~~~~^~~~~~~~~~~~
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/i2c-display-example.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5672: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
